syntax = "proto3";
package propose.v1;

import "ProposeServiceCommon.proto";
import "Either.proto";
import "scalapb/scalapb.proto";

option java_package = "coop.rchain.casper.protocol";

option (scalapb.options) = {
  package_name: "coop.rchain.casper.protocol"
  flat_package: true
  single_file: true
};

service ProposeService {
  rpc propose(PrintUnmatchedSendsQuery) returns (Either) {}
}
