syntax = "proto3";
package propose;

import "scalapb/scalapb.proto";

option java_package = "coop.rchain.casper.protocol";

option (scalapb.options) = {
  package_name: "coop.rchain.casper.protocol"
  flat_package: true
  single_file: true
};

message PrintUnmatchedSendsQuery {
  bool printUnmatchedSends = 1;
}
